...
                android:padding="5dp"
                android:textSize="20dp"
                android:text="First Name"/>
            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/fullnames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>
...

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Surname"/>
            </android.support.v7.widget.CardView>

            <EditText
                android:padding="10dp"
                android:id="@+id/Surname"
                android:layout_width="match_parent"
...
                android:textSize="20dp"
                android:text="Email Address"/>

            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:textSize="18dp"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>
...
                android:text="Identity or Passport Number"/>

            </android.support.v7.widget.CardView>

            <EditText
                android:padding="10dp"
                android:id="@+id/identity_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#dfdfdf"
                android:textSize="18dp"
                android:inputType="numberDecimal"
                android:maxLines="1"
...
                android:textSize="20dp"
                android:text="Gender"/>
            </android.support.v7.widget.CardView>

            <RadioGroup
                android:padding="10dp"
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/male"
                    android:textColor="#000"
                    android:text="Male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <RadioButton
                    android:id="@+id/female"
                    android:textColor="#000"
                    android:text="Female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </RadioGroup>
        </LinearLayout>
...
                android:textSize="20dp"
                android:text="Cellphone Number"/>

            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"/>
...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Password"/>

            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#dfdfdf"
                android:textSize="18dp"
                android:maxLines="1"
                android:singleLine="true"
...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="Confirm Password"/>

            </android.support.v7.widget.CardView>
            <EditText
                android:padding="10dp"
                android:id="@+id/confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#dfdfdf"
                android:textSize="18dp"
                android:maxLines="1"
                android:singleLine="true"
...
                android:elevation="8dp"
                app:cardBackgroundColor="@color/colorBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                android:onClick="doRegistration"
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:padding="5dp"
                android:textSize="25dp"
                android:text="Create Account"
...
