...

            <EditText
                android:id="@+id/username"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user1"
                android:hint="Email"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                android:layout_margin="30dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
...
